--- a/review/config.yml
+++ b/review/config.yml
@@ -23,11 +23,11 @@ language: ja
 
 # 書名
 # 読みを入れる例 booktitle: {name: "Re:VIEW EPUBサンプル", file-as: "リビューイーパブサンプル"}
-booktitle: Re:VIEWサンプル書籍
+booktitle: Text of reconfigurable device
 
 # 著者名。「, 」で区切って複数指定できる
 # 読みを入れる例 aut: [{name: "青木峰郎", file-as: "アオキミネロウ"}, {name: "武藤健志", file-as: "ムトウケンシ"}, {name: "高橋征義", file-as: "タカハシマサヨシ"}, {name: "角征典", file-as: "カドマサノリ"}]
-aut: ["青木峰郎", "武藤健志", "高橋征義", "角征典"]
+aut: ["Masayuki Takagiwa"]
 
 # 以下はオプション
 # 以下はオプション(autと同じように配列書式で複数指定可能)。
@@ -162,6 +162,7 @@ coverimage: cover.jpg
 
 # 取り込む画像が格納されているディレクトリ。省略した場合は以下
 # imagedir: images
+imagedir: ../source/figure
 
 # 取り込むフォントが格納されているディレクトリ。省略した場合は以下
 # fontdir: fonts
